--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Giả thuyết sau mỗi va chạm mất 1% năng lượng</p>
     <p style="color: red;">Lưu ý: Sẽ gây giật lag nếu có quá nhiều hạt, khuyến cáo nhập dưới 4000 hạt</p>
     <input type="number" name="par" value="" id="par">
-    <input type="button" onclick="main()" value="Submit" id='button'>
+    <input type="button" onclick="main()" value="Submit" id='button'><br>
     <canvas width="648" height="500"></canvas>
     <script src="simulation.js"></script>
 </body>
